[project]
name = "coffe"
dynamic = ["version"]
description = "Python wrapper for the COrrelation Function Full-sky Estimator code"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Goran Jelic-Cizmek", email = "goran.jelic-cizmek@unige.ch"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.5",
]
optional-dependencies.test = ["pytest", "pandas", "scipy"]
optional-dependencies.docs = ["pdoc"]
optional-dependencies.dev = [
    "pylint",
    "mypy",
    "isort",
    "reorder-python-imports",
    "autoimport",
    "black",
    "cibuildwheel",
    "twine",
]

[project.scripts]
coffe-cli = "coffe.__main__:main"

[project.urls]
repository = "https://github.com/JCGoran/coffe"

[tool.cibuildwheel]
skip = ["cp36-*", "pp*", "pypy*", "*musllinux*"]
test-extras = ["test", "docs"]
test-command = [
    "pytest {package}/tests",
    "bash {package}/scripts/generate_docs.sh",
]

[tool.cibuildwheel.linux]
before-all = [
    # install CUBA, FFTW, GSL, and CLASS
    "bash scripts/install_other.sh",
]
environment = { LDFLAGS="-L/opt/cuba/lib -L/opt/class_public/lib ${LDFLAGS}", CFLAGS="-I/opt/cuba/include -I/opt/class_public/include ${CFLAGS}" }


[build-system]
requires = ["setuptools", "wheel", "Cython<3", "setuptools_scm"]

[tool.setuptools_scm]
