[project]
name = "coffe"
dynamic = ["version"]
description = "Python wrapper for the COrrelation Function Full-sky Estimator code"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Goran Jelic-Cizmek", email = "goran.jelic-cizmek@unige.ch"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.5,<2",
]

[project.scripts]
coffe-cli = "coffe.__main__:main"

[project.urls]
repository = "https://github.com/JCGoran/coffe"

[tool.cibuildwheel]
skip = ["cp36-*", "cp37-*", "pp*", "pypy*", "*musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = [
    # install CUBA, FFTW, GSL, libconfig, and CLASS
    "conan install . --output-folder=build_dependencies --build=missing",
    "bash scripts/install_other.sh cuba class",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "docker.io/library/coffe"
archs = ["x86_64"]
before-all = [
    # install CUBA, FFTW, GSL, libconfig, and CLASS
    "bash scripts/install_other.sh gsl libconfig fftw cuba class",
]
environment = { LDFLAGS="-L/opt/cuba/lib -L/opt/class_public/lib ${LDFLAGS}", CFLAGS="-I/opt/cuba/include -I/opt/class_public/include ${CFLAGS}" }

[build-system]
requires = ["scikit-build-core", "cython<3", "setuptools-scm>=8.0.0", "conan; sys_platform=='darwin'"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["python/coffe"]
logging.level = "DEBUG"
wheel.exclude = ["**.pyx", "CMakeLists.txt", "**.pxd"]

[tool.scikit-build.cmake]
verbose = true
version = ">=3.15.0"

[tool.scikit-build.cmake.define]
COFFE_ENABLE_CLASS = "ON"
COFFE_ENABLE_PYTHON = "ON"
COFFE_ENABLE_MATHOPTS = "ON"
COFFE_ENABLE_CUBA="ON"

[tool.setuptools_scm]
